--- a/index.html
+++ b/index.html
@@ -24,12 +24,15 @@
             <div class="dashboard">
                 <div class="console nextPieceDisplay"></div>
                 <div class="console scoreDisplay"></div>
+                <div class="console controls">
+                    <input type="button" value="START" id="startGame"/>
+                </div>
             </div>
         </div>
 
         <script src="globals.js"></script>
-        <script src="matrix.js"></script>
-        <script src="block.js"></script>
+        <script src="state.js"></script>
+        <script src="renderer.js"></script>
         <script src="index.js"></script>
         <link rel="stylesheet" href="index.css">
 </body>
