--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 <body>
         <div class="background">
             <div class="arenaContainer">
-                <canvas class="console arena" height="620" width="320"/>
+                <canvas class="console arena" height="620" width="350"/>
             </div>
             <div class="dashboard">
                 <div class="console nextPieceDisplay"></div>
                 <div class="console scoreDisplay"></div>
                 <div class="console controls">
-                    <input type="button" value="START" id="startGame"/>
+                    <input type="button" value="START" id="startGame" disabled="true"/>
                 </div>
             </div>
         </div>
