--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <script src="globals.js"></script>
         <script src="state.js"></script>
         <script src="renderer.js"></script>
+        <script src="game.js"></script>
         <script src="index.js"></script>
         <link rel="stylesheet" href="index.css">
 </body>
