Completed start up sequence

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
                 <div class="console nextPieceDisplay"></div>
                 <div class="console scoreDisplay"></div>
                 <div class="console controls">
-                    <input type="button" value="START" id="startGame" disabled="true"/>
+                    <input type="button" value="START" id="startGame"/>
+                    <input type="button" value="LEFT" id="moveLeft"/>
+                    <input type="button" value="RIGHT" id="moveRight"/>
                 </div>
             </div>
         </div>
